--- a/P000279.opf/meta.yml
+++ b/P000279.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P000279
+id: P000279
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG10287
   title: རྒྱ་གཟའ་བལ་བཟའི་རྣམ་ཐར། ༼དབུ་ཅན་བྲིས་མ།༽
-  volume:
+  author: ''
+  volumes:
     0665109f9c864a8a8dd9f7b10de41b74:
       image_group_id: I1KG10341
       title: Volume 1 of rgya gza' bal bza'i rnam thar/ (dbu chen bris ma/)
       volume_number: 1
       total_pages: 276
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: རྒྱ་གཟའ་བལ་བཟའི་རྣམ་ཐར། ༼དབུ་ཅན་བྲིས་མ།༽
   author: ''
