pagination fixed with Pagination

--- a/P000279.opf/layers/v001/Pagination.yml
+++ b/P000279.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 03437c3e4e0e42328732f033549ce51a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bec06d859066485a9820ed416710b803:
