--- a/P000279.opf/meta.yml
+++ b/P000279.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000279
 initial_creation_type: ocr
 created_at: 20/02/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-16 15:10:40.645193
 source_metadata:
   id: bdr:W1KG10287
   title: རྒྱ་གཟའ་བལ་བཟའི་རྣམ་ཐར། ༼དབུ་ཅན་བྲིས་མ།༽
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 276
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
